syntax = "proto3";

package users;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc UpdateUser (UserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string user_id = 1;
  string username = 3;
  string email = 4;
}

message UserResponse {
  string user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
  string password_hash = 5;
  string user_role = 6;
  string phone_number = 7;
  string mailing_address = 8;
  string status = 9;
}