// Original file: src/proto/user.proto


export interface UserResponse {
  'userId'?: (string);
  'fullName'?: (string);
  'username'?: (string);
  'email'?: (string);
  'passwordHash'?: (string);
  'userRole'?: (string);
  'phoneNumber'?: (string);
  'mailingAddress'?: (string);
  'status'?: (string);
}

export interface UserResponse__Output {
  'userId'?: (string);
  'fullName'?: (string);
  'username'?: (string);
  'email'?: (string);
  'passwordHash'?: (string);
  'userRole'?: (string);
  'phoneNumber'?: (string);
  'mailingAddress'?: (string);
  'status'?: (string);
}
